<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            style="@style/BottomSheetTitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_select"/>
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_hate"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_cheat"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_political"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_impersonation"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_pornography"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_commercial"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray" />
        <TextView
            style="@style/BottomSheetReportTypeTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_inappropriateness"/>
    </LinearLayout>
</layout>