<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_all_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp">

        <TextView
            style="@style/MypageDialogTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/user_info_logout_message"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_logout_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/user_info_logout_cancel"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_logout_confirm"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:text="@string/user_info_logout_confirm"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</layout>