<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_board_write"
            layout="@layout/toolbar_back_button" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BoardWriteButtonTextStyle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded_radius30"
            android:text="@string/board_write_button_finish"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_board_write"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_board_write"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_board_write">

            <ImageView
                android:id="@+id/imagebutton_photo_add"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_add_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="267dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.07999998">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray" />

            <EditText
                style="@style/BoardWriteTitleHintTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/board_write_textview_title_hint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray" />

            <EditText
                style="@style/BoardWriteContentHintTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/board_write_textview_content_hint" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
